# django-admin-commands

./: CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
admin_commands/: admin.py  app_settings.py  apps.py  forms.py  models.py  tests.py  utils.py
admin_commands/locale/ar/LC_MESSAGES/: django.po
admin_commands/management/commands/: test_command.py
admin_commands/migrations/: 0001_initial.py  0002_auto_20230210_1746.py
admin_commands/templates/admin_commands/: execute_command.html
tests/: test_settings.py  urls.py
