[metadata]
license_file = LICENSE
name = django-admin-commands2
version = attr: admin_commands.__version__
author = Ramez Ashraf
author_email = ramez@kuwaitnet.com
description = Execute management commands via admin with ease and control.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/KUWAITNET/django-admin-commands
project_urls =
    Source = https://github.com/KUWAITNET/django-admin-commands
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.6
install_requires =
    django>=3.2

